<?xml version="1.0"?>
<package format="2">
  <name>franka_sim_hw</name>
  <version>0.7.1</version>
  <description>franka_sim_hw provides model and state interface for using simulated panda robot with ros_control</description>
  <maintainer email="mihael.simonic@ijs.si">Mihael Simonic</maintainer>
  <license>Apache 2.0</license>

  <url type="website">http://wiki.ros.org/franka_hw</url>
  <url type="repository">https://github.com/frankaemika/franka_ros</url>
  <author>Mihael Simonic</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>actionlib_msgs</depend>
  <depend>actionlib</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>joint_limits_interface</depend>
  <depend>libfranka</depend>
  <depend>roscpp</depend>
  <depend>urdf</depend>
  <depend>pluginlib</depend>
  <depend>franka_msgs</depend>

  <test_depend>franka_description</test_depend>
  <test_depend>gtest</test_depend>
  <test_depend>rostest</test_depend>

  <export>
      <hardware_interface plugin="${prefix}/franka_combinable_hw_plugin.xml"/>
  </export>
</package>
